fixed missing color issue

--- a/src/components/Game/index.css
+++ b/src/components/Game/index.css
@@ -42,7 +42,7 @@
     height: 55vh;
     overflow-y: auto;
     position: relative;
-    font-size: 30px;
+    font-size: 18px;
   }
 }
 
